# unifibackup

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum  main.go  unifibackup.service
.github/: dependabot.yaml
.github/workflows/: ci.yaml
cmd/unifibackup/: daemon.go  genmeta.go  main.go
cmd/unifibackup/monitor/: monitor.go
cmd/unifibackup/uploader/: uploader.go
internal/pkg/autobackup/: doc.go  file.go  metafile.go
internal/pkg/countingreader/: BUILD.bazel  countingreader.go
monitor/: BUILD.bazel  monitor.go
uploader/: BUILD.bazel  uploader.go
