load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/gebn/unifibackup
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/gebn/unifibackup",
    visibility = ["//visibility:private"],
    deps = [
        "//monitor:go_default_library",
        "//uploader:go_default_library",
        "@com_github_alecthomas_kingpin//:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_gebn_go_stamp//:go_default_library",
    ],
)

go_binary(
    name = "unifibackup",
    embed = [":go_default_library"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
