load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["monitor.go"],
    importpath = "github.com/gebn/unifibackup/v2/monitor",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
    ],
)
